Restore TDH edition id sorting defaults
